Integracion de imagenes

--- a/src/components/CompCarousel.astro
+++ b/src/components/CompCarousel.astro
@@ -2,11 +2,11 @@
 const {src, alt}=Astro.props;
 ---
 
-<!-- <img
+<img
     class="img-carousel absolute w-full h-full opacity-45"
     src=`${src}`
     alt=`${alt}`
-/>-->
+/>
 <div class="text-carousel flex flex-col justify-center gap-7 items-center font-bold">
-    <h2 class="text-center text-4xl">CON LO MEJOR DEL AGRO, HACEMOS CRECER TU NEGOCIO</h2>
+    
 </div>
