--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,14 +14,15 @@ import Layout from "../layouts/Layout.astro";
 	</section>
 	<section class="my-5 flex flex-wrap gap-10 justify-center items-center">
 		<div class="w-[70%] md:w-[40%] min-h-[500px] bg-[#27be27] rounded-xl p-8 text-white text-center grid place-items-center">
+			<img class="w-[100px]" src="/saco.png" alt="icono de saco de harina">
 			<h3 class="text-3xl font-bold">HARINAS Y BALANCEADOS</h3>
 			<p class="text-xl font-semibold">
-				Harinas de soya y balanceados de nuestra línea de productos originales AKU para nutrición animal.
-Productos elaborados en nuestra fábrica en la ciudad de Santa Cruz.</p>
+				Ofrecemos harinas de soya y alimentos balanceados de nuestra línea original AKU para la nutrición animal, elaborados en nuestra fábrica ubicada en la ciudad de Santa Cruz.</p>
 		</div>
 		<div class="w-[70%] md:w-[40%] min-h-[500px] bg-[#fd2d61] rounded-xl p-8 text-white text-center grid place-items-center">
+			<img class="w-[70px]" src="/maiz.png" alt="icono de maiz">
 			<h3 class="text-3xl font-bold">GRANOS</h3>
-			<p class="text-xl font-semibold">Nuestra unidad de Brokers de Granos se especializa en la compra y venta de soya, maíz y sorgo a granel y al por mayor. Combinamos alta calidad de producto con el servicio de acompañamiento más seguro y confiable.</p>
+			<p class="text-xl font-semibold">Nuestra división de Brokers de Granos se especializa en comercializar soya, maíz y sorgo a granel y al por mayor, combinando la más alta calidad de producto con un servicio de acompañamiento seguro y confiable.</p>
 		</div>
 	</section>
 	<span class="my-5 font-bold text-2xl text-center block p-3">“Del corazón del campo a la vanguardia de la industria.”</span>
