--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="bg-green-800 text-center text-green-300 flex justify-center items-center min-h-32 p-3">
+<footer class="border-t-2 border-green-950 bg-green-700 text-center text-green-300 flex justify-center items-center min-h-32 p-3">
     <nav>
         <ul class="grid place-items-center md:flex md:flex-wrap md:justify-center md:items-center md:gap-14 gap-5 text-2xl ">
             <li><a href="/">Inicio</a></li>
