--- a/src/pages/Granos.astro
+++ b/src/pages/Granos.astro
@@ -2,5 +2,35 @@
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout title="Agrofast - Granos">
-
+    <div class="h-[55vh] text-center gap-10 flex-wrap flex justify-center items-center font-bold text-3xl bg-green-600 text-white">
+        <h1>EXPERTOS EN LA COMERCIALIZACIÓN DE GRANOS</h1>
+        <img class="hidden md:block w-[110px]" src="/maiz.png" alt="icono de maiz">
+    </div>
+    <p class="text-center font-bold text-2xl m-20">Conscientes de la importancia de una nutrición animal óptima, hemos desarrollado la línea de productos AKU, que incluye harinas de soya y balanceados de calidad internacional, elaborados localmente en nuestra moderna fábrica.</p>
+    <div class="my-5 flex flex-wrap gap-10 justify-center items-center bg-green-300 py-4">
+        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#e4e4e4] rounded-3xl p-2 text-center grid place-items-center gap-6">
+            <img class="rounded-full w-44 h-44 object-cover" src="/maizFoto.jpg" alt="foto de maiz agrofast">
+            <div>
+                <h3 class="text-3xl font-bold">MAIZ</h3>
+                <p>Maíz a granel comercializado por tonelada. Para industrias y granjas.</p>
+            </div>
+            <button class="p-1 text-xl font-bold bg-green-800 text-white hover:text-green-950 hover:bg-green-300 rounded-lg"><a class="flex items-center" href=""><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-whatsapp"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" /><path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" /></svg>COTIZAR</a></button>
+        </div>
+        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#9cfd2d] rounded-3xl p-2 text-center grid place-items-center gap-6">
+            <img class="rounded-full w-44 h-44 object-cover" src="/sorgoFoto.jpg" alt="foto de sorgo agrofast">
+            <div>
+                <h3 class="text-3xl font-bold">SORGO</h3>
+                <p>Sorgo entero producto a granel comercializado por tonelada. Para industrias y granjas. Consumo animal.</p>
+            </div>
+            <button class="p-1 text-xl font-bold bg-green-800 text-white hover:text-green-800 hover:bg-green-300 rounded-lg"><a class="flex items-center" href=""><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-whatsapp"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" /><path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" /></svg>COTIZAR</a></button>
+        </div>
+        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#c6f0c6] rounded-3xl p-2 text-center grid place-items-center gap-6">
+            <img class="rounded-full w-44 h-44 object-cover" src="/soyaFoto.jpg" alt="foto de soya agrofast">
+            <div>
+                <h3 class="text-3xl font-bold">SOYA</h3>
+                <p>Grano de soya entero producto a granel comercializado por tonelada. Para industrias y granjas.</p>
+            </div>
+            <button class="p-1 text-xl font-bold bg-green-800 text-white hover:text-green-950 hover:bg-green-300 rounded-lg"><a class="flex items-center" href=""><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-whatsapp"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" /><path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" /></svg>COTIZAR</a></button>
+        </div>
+    </div>
 </Layout>
