--- a/src/pages/Granos.astro
+++ b/src/pages/Granos.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro"
         <h1>EXPERTOS EN LA COMERCIALIZACIÓN DE GRANOS</h1>
         <img class="hidden md:block w-[110px]" src="/maiz.png" alt="icono de maiz">
     </div>
-    <p class="text-center font-bold text-2xl m-20">Conscientes de la importancia de una nutrición animal óptima, hemos desarrollado la línea de productos AKU, que incluye harinas de soya y balanceados de calidad internacional, elaborados localmente en nuestra moderna fábrica.</p>
+    <p class="text-center font-bold text-2xl m-20">Nos encargamos de garantizar las negociaciones más favorables. Nos dedicamos a comercializar los granos más demandados del mercado: soya, maíz y sorgo, llevando lo mejor de la cosecha a las industrias. Velamos por la excelencia para nuestros clientes y por la transparencia con los productores.</p>
     <div class="my-5 flex flex-wrap gap-10 justify-center items-center bg-green-300 py-4">
         <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#e4e4e4] rounded-3xl p-2 text-center grid place-items-center gap-6">
             <img class="rounded-full w-44 h-44 object-cover" src="/maizFoto.jpg" alt="foto de maiz agrofast">
