--- a/src/pages/Contactos.astro
+++ b/src/pages/Contactos.astro
@@ -2,5 +2,8 @@
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout title="Agrofast - Contactos">
-
+    <div class="h-[55vh] relative w-full text-center gap-10 flex-wrap flex justify-center items-center font-bold text-3xl bg-green-400 bg-opacity-80 text-white">
+        <h1 class="text-4xl font-bold z-10">CONTACTATE CON NOSOTROS</h1>
+        <img class="absolute object-cover w-full h-full -z-10" src="/image3.png" alt="foto de cultivo de maiz">
+    </div>
 </Layout>
