--- a/src/pages/HarinaBalanc.astro
+++ b/src/pages/HarinaBalanc.astro
@@ -2,13 +2,15 @@
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout title="Agrofast - Harinas">
-    <div class="h-[55vh] text-center gap-10 flex-wrap flex justify-center items-center font-bold text-3xl bg-yellow-600 text-white">
+    <div class="h-[55vh] relative w-full text-center gap-10 flex-wrap flex justify-center items-center font-bold text-3xl bg-yellow-600 bg-opacity-40 text-white">
         <h1>DEDICADOS A LA NUTRICIÓN ANIMAL</h1>
         <img class="hidden md:block w-[170px]" src="/vaca.png" alt="icono de maiz">
+        <img class="absolute object-cover w-full h-full -z-10" src="/image4.png" alt="foto de cultivo de soya">
     </div>
     <p class="text-center font-bold text-2xl m-20">Conscientes de la importancia de una nutrición animal óptima, hemos desarrollado la línea de productos, que incluye harinas de soya y balanceados de calidad internacional, elaborados localmente en nuestra moderna fábrica.</p>
-    <div class="my-5 flex flex-wrap gap-10 justify-center items-center bg-yellow-300 py-4">
-        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#395bca] rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
+    <div class="my-5 relative w-full flex flex-wrap gap-10 justify-center items-center bg-blue-950 bg-opacity-35 py-4">
+        <img class="absolute object-cover opacity-30 w-full h-full -z-10" src="/image3.png" alt="foto de cultivo de maiz">
+        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#ff9137] rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
             <img class="rounded-full w-44 h-44 object-cover" src="/harinaSI.jpg" alt="foto de maiz agrofast">
             <div>
                 <h3 class="text-3xl font-bold">Harina de Soya Integral</h3>
@@ -16,7 +18,7 @@ import Layout from "../layouts/Layout.astro"
             </div>
             <button class="p-1 text-xl font-bold bg-green-800 text-white hover:text-green-950 hover:bg-green-300 rounded-lg"><a class="flex items-center" href=""><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-whatsapp"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" /><path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" /></svg>COTIZAR</a></button>
         </div>
-        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#3122b1] rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
+        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#e7fc30] rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
             <img class="rounded-full w-44 h-44 object-cover" src="/harinaSE.jpg" alt="foto de sorgo agrofast">
             <div>
                 <h3 class="text-3xl font-bold">Harina de Soya Expeller</h3>
@@ -24,7 +26,7 @@ import Layout from "../layouts/Layout.astro"
             </div>
             <button class="p-1 text-xl font-bold bg-green-800 text-white hover:text-green-800 hover:bg-green-300 rounded-lg"><a class="flex items-center" href=""><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-whatsapp"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" /><path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" /></svg>COTIZAR</a></button>
         </div>
-        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#186974] rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
+        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-yellow-600 rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
             <img class="rounded-full w-44 h-44 object-cover" src="/harinaSH.jpg" alt="foto de soya agrofast">
             <div>
                 <h3 class="text-3xl font-bold">Harina de Soya HIPRO</h3>
