no otra vez vercel :(

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,9 +9,9 @@ import Footer from '../components/Footer.astro';
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8" /> 
 		<meta name="description" content="Nos encargamos de la comercialización, producción y logística de
 			productos del agro, desde materia prima e insumos hasta productos
 			terminados para consumo." />
