--- a/src/pages/Contactos.astro
+++ b/src/pages/Contactos.astro
@@ -6,4 +6,7 @@ import Layout from "../layouts/Layout.astro"
         <h1 class="text-4xl font-bold z-10">CONTACTATE CON NOSOTROS</h1>
         <img class="absolute object-cover w-full h-full -z-10" src="/image3.png" alt="foto de cultivo de maiz">
     </div>
+    <form action="">
+        
+    </form>
 </Layout>
