--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="border-t-2 border-green-950 bg-green-700 text-center text-white flex justify-center items-center min-h-32 p-3">
+<footer class="border-t-2 border-green-950 bg-green-700 text-center text-white flex flex-col justify-center items-center min-h-32 p-3">
     <nav>
         <ul class="grid place-items-center md:flex md:flex-wrap md:justify-center md:items-center md:gap-14 gap-5 text-2xl ">
             <li><a href="/">Inicio</a></li>
@@ -7,4 +7,9 @@
             <li><a href="/Contactos">Contactos</a></li>
         </ul>
     </nav>
+    <div>
+        Conatáctate con nosotros: Agrofastsrl@gmail.com
+        <br>
+        &copy; Agrofast s.r.l 2024 
+    </div>
 </footer>
