--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,5 +27,7 @@ import Footer from '../components/Footer.astro';
 	</body>
 </html>
 <style is:global>
-	
+	*{
+		box-sizing: border-box;
+	}
 </style>
