--- a/src/pages/Contactos.astro
+++ b/src/pages/Contactos.astro
@@ -8,21 +8,21 @@ import Layout from "../layouts/Layout.astro"
     </div>
     <h2 class="text-center font-bold text-5xl">Contacténos</h2>
     <div class="grid place-items-center mb-10" >
-        <form class="w-[80%] grid place-items-center border-2 border-green-300 h-auto rounded-2xl p-6 gap-4" action="">
+        <form class="w-[80%] grid place-items-center border-2 border-green-300 h-auto rounded-2xl p-6 gap-4"  action="https://formsubmit.co/josuemmamaniag@gmail.com" method="POST">
             <div class="flex flex-col">
                 <label for="name">NOMBRE</label>
                 <input class="p-6 text center md:min-w-[800px] border-2 border-black rounded-lg max-h-[40px]" type="text" name="name" id="name" placeholder="introduzca su nombre..." required>
             </div>
             <div class="flex flex-col">
-                <label for="phone">Teléfomo</label>
+                <label for="phone">TELÉFONO</label>
                 <input class="p-6 text center md:min-w-[800px] border-2 border-black rounded-lg max-h-[40px]" type="text" name="phone" id="phone" placeholder="introduzca su numero de o teléfono" required>
             </div>
             <div class="flex flex-col">
-                <label for="correo">Correo Electronico</label>
+                <label for="email">CORREO ELECTRONICO</label>
                 <input class="p-6 text center md:min-w-[800px] border-2 border-black rounded-lg max-h-[40px]" type="text" name="correo" id="correo" placeholder="introduzca su correo..." required>
             </div>
             <div class="flex flex-col">
-                <label for="mensaje">Mensaje</label>
+                <label for="mensaje">MENSAJE</label>
                 <textarea placeholder="Mensaje... " class="p-6 md:min-w-[800px] border-2 border-black rounded-xl min-h-[100px]" name="mensaje" id="mensaje">
                 </textarea>
             </div>
