--- a/src/pages/Contactos.astro
+++ b/src/pages/Contactos.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro"
     </div>
     <h2 class="text-center font-bold text-5xl">Contacténos</h2>
     <div class="grid place-items-center mb-10" >
-        <form class="w-[80%] grid place-items-center border-2 border-green-300 h-auto rounded-2xl p-6 gap-4"  action="https://formsubmit.co/josuemmamaniag@gmail.com" method="POST">
+        <form class="w-[80%] grid place-items-center border-2 border-green-300 h-auto rounded-2xl p-6 gap-4"  action="https://formspree.io/f/xrbzkdkb" method="post">
             <div class="flex flex-col">
                 <label for="name">NOMBRE</label>
                 <input class="p-6 text center md:min-w-[800px] border-2 border-black rounded-lg max-h-[40px]" type="text" name="name" id="name" placeholder="introduzca su nombre..." required>
