--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,7 +36,7 @@ import Logo from "./Logo.astro"
         <ul class="grid gap-4 place-items-center">
             <li><a href="/">Inicio</a></li>
             <li><a href="/Granos">Granos</a></li>
-            <li><a href="/HarinaBalanc">Harinas - Balanceados</a></li>
+            <li><a href="/HarinaBalanc">Harinas</a></li>
             <li><a href="/Contactos">Contactos</a></li>
         </ul>
     </nav>
