--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
 		</h2>
 	</section> 
 	<section class="my-5 flex flex-wrap gap-10 justify-center items-center">
-		<div class="w-[70%] md:w-[40%] min-h-[500px] bg-[#27be27] hover:bg-green-800 transition-colors rounded-xl p-8 text-white text-center">
+		<div class="w-[70%] md:w-[40%] min-h-[500px] bg-[#3fec47] hover:bg-green-600 transition rounded-xl p-8 text-white text-center grid place-items-center">
 			<a class=" grid place-items-center p-8" href="/HarinaBalanc">
 				<img class="w-[100px]" src="/saco.png" alt="icono de saco de harina">
 				<h3 class="text-3xl font-bold">HARINAS Y BALANCEADOS</h3>
@@ -21,7 +21,7 @@ import Layout from "../layouts/Layout.astro";
 				Ofrecemos harinas de soya y alimentos balanceados de nuestra línea original para la nutrición animal, elaborados en nuestra fábrica ubicada en la ciudad de Santa Cruz.</p>
 			</a>
 		</div>
-		<div class="w-[70%] md:w-[40%] min-h-[500px] bg-[#fd2d61] hover:bg-red-600 transition rounded-xl p-8 text-white text-center grid place-items-center">
+		<div class="w-[70%] md:w-[40%] min-h-[500px] bg-[#f0aa41] hover:bg-orange-600 transition rounded-xl p-8 text-white text-center grid place-items-center">
 			<a class="grid place-items-center p-8" href="/Granos">
 				<img class="w-[70px]" src="/maiz.png" alt="icono de maiz">
 				<h3 class="text-3xl font-bold">GRANOS</h3>
