--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from "../layouts/Layout.astro";
 	</section> 
 	<section class="my-5 flex flex-wrap gap-10 justify-center items-center">
 		<div class="w-[70%] md:w-[40%] min-h-[500px] bg-[#3fec47] hover:bg-green-600 transition rounded-xl p-8 text-white text-center grid place-items-center">
-			<a class=" grid place-items-center p-8" href="/HarinaBalanc">
+			<a class=" flex flex-col justify-center items-center p-8" href="/HarinaBalanc">
 				<img class="w-[100px]" src="/saco.png" alt="icono de saco de harina">
 				<h3 class="text-3xl font-bold">HARINAS Y BALANCEADOS</h3>
 				<p class="text-xl font-semibold">
