--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
 		</h2>
 	</section> 
 	<section class="my-5 flex flex-wrap gap-10 justify-center items-center">
-		<div class="w-[70%] md:w-[40%] min-h-[500px] bg-[#2bff3c] hover:bg-green-600 transition rounded-xl p-8 text-white text-center grid place-items-center">
+		<div class="w-[70%] md:w-[40%] min-h-[500px] bg-[#32a03b] hover:bg-green-600 transition rounded-xl p-8 text-white text-center grid place-items-center">
 			<a class=" flex flex-col justify-center items-center" href="/HarinaBalanc">
 				<img class="w-[100px]" src="/saco.png" alt="icono de saco de harina">
 				<h3 class="text-3xl font-bold">HARINAS Y BALANCEADOS</h3>
