--- a/src/pages/HarinaBalanc.astro
+++ b/src/pages/HarinaBalanc.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro"
             </div>
             
         </div>
-        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#e7fc30] rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
+        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#b9ca1d] rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
             <img class="rounded-full w-44 h-44 object-cover" src="/harinaSE.jpg" alt="foto de sorgo agrofast">
             <div>
                 <h3 class="text-3xl font-bold">Harina de Soya Expeller</h3>
@@ -26,7 +26,7 @@ import Layout from "../layouts/Layout.astro"
             </div>
 
         </div>
-        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-yellow-600 rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
+        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-red-700 rounded-3xl p-2 text-center grid place-items-center gap-6 text-white">
             <img class="rounded-full w-44 h-44 object-cover" src="/harinaSH.jpg" alt="foto de soya agrofast">
             <div>
                 <h3 class="text-3xl font-bold">Harina de Soya HIPRO</h3>
