--- a/src/pages/Granos.astro
+++ b/src/pages/Granos.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro"
             </div>
             
         </div>
-        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#9cfd2d] rounded-3xl p-2 text-center grid place-items-center gap-6">
+        <div class="w-[50%] md:w-[20%] min-h-[300px] max-h-[500px] bg-[#5d9e13] rounded-3xl p-2 text-center grid place-items-center gap-6">
             <img class="rounded-full w-44 h-44 object-cover" src="/sorgoFoto.jpg" alt="foto de sorgo agrofast">
             <div>
                 <h3 class="text-3xl font-bold">SORGO</h3>
